# mdbook-docx

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
examples/: reference.docx
examples/basic/: Styles.toml  book.toml
examples/basic/src/: chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md
src/: document.rs  logs.rs  main.rs  pandoc.rs
