[package]
name = "mdbook-docx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.25"
docx-rs = "0.4.6"
markdown = "0.3.0"
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
derive_more = "0.99.17"
glob = "0.3.1"

# zip pinned to same version as docx-rs module
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }